Error's don't break the edit account layout. Fixes Issue #13

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -41,6 +41,7 @@
 
 .edit-account {
   width: 600px;
+  margin-bottom: 50px;
   
   table caption {
     color: #555;
